fix toList -> Collectors.toList()